Fix form's negative margin on small screens

--- a/css/pages/_registration-page.less
+++ b/css/pages/_registration-page.less
@@ -13,7 +13,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
-		max-width: 30em;
+		max-width: 624px;
 	}
 
 	.autarkis-note {
@@ -36,11 +36,17 @@
 	form {
 		background-color: @backgroundColor;
 		color: @color;
-		padding: 2em 3em 0;
-		margin: 2em -3em 0;
+		padding: 46px 70px 0;
+		margin: 46px -70px 0;
 		border-top: 1px solid;
 		font-size: 1.1em;
 		font-style: italic;
+
+		@media (max-width: 800px) {
+			padding: 46px 0 0;
+			margin: 46px 0 0;
+
+		}
 	}
 
 	fieldset {
